[project]
name = "CyMorph2"
description = "A galaxy Morphology package"
readme = "README.md"
authors = [
    { name = "Rubens Sautter", email = "rubens.sautter@gmail.com" }
]
license = { text = "BSD 3-Clause License" }
dependencies = [
    "numpy",
    "GPA",
    "eta"
]
dynamic = ["version"]

[project.urls]
homepage = "https://cymorph2.github.io"
